static/meal_planner_styles.css
.header {
    flex-shrink: 0;
}

.footer,
.push {
    background-color: #a2a8d3;
    height: 50px;
}

footer {
    position: absolute;
    margin-top: 40px;
    bottom: 0;
    width: 60.4%;
    height: 80px;
    text-align: right;
    
}

html {
    position: relative;
    min-height: 100%;
}

body {
    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
    font-weight: 300;
    background-color: #e7eaf6;
    min-height: 100%;
    margin: 0;
}

.content {
    text-align: center;
}

.container {
    padding-bottom: 80px;
    height: auto;

}

.table_container {
    margin: auto;
}

.pending_ingredient_card, .recipe_card, .front_page_cards {
    margin: auto;
    margin-bottom: 10px;
    text-align: center;
    align-items: center;
    background-color: #a2a8d3;
    border-radius: 15px;
    padding-bottom: 10px;
}

.add_ingredient_card {
    margin: auto;
}

/*
.recipe_card {
    border-style: double;
    border-radius: 2px;
    background-color: aqua;
    width: 50%;
    margin: auto;
    margin-top: 3px;
    min-height: 30px;
    vertical-align: middle;
} */

/*
#comment_card {
    margin: 10px;
    padding: 5px;
    border-style: solid;
    border-width: 1px;
    width: 30%;
} */

.meal_card, #comment_card {
    margin: auto;
    margin-top: 10px;
    padding: 5px;
    border-style: solid;
    border-width: 1px;
    text-align: center;
    background-color: #a2a8d3;
    border-radius: 15px;
    width: 50%;
}

#user_card {
    width: 50%;
    text-align: center;
    align-content: center;
    margin: auto;
    margin-top: 15px;
    border-radius: 15px;
}

.user_tables {
    margin: auto;
}

#recipes_card, #ingredients_card, #users_card {
    background-color: #a2a8d3;
    margin:auto;
    text-align: center;
    vertical-align: middle;
    font-size: x-large;
    height: 250px;
    margin: 10px;
}

.navbar {
    background-color: #a2a8d3;
    align-items: center;
    display: flex;
}

.navbar ul {
    list-style-type: none;
    display: flex;
    align-items: center;
    margin: 0;
    padding: 0;
}

.navbar ul li a {
    padding: 12px;
    display: block;
}

.navbar ul a:hover,
.navbar ul a:focus {
    background-color: whitesmoke;
}

table {
    margin: auto;
    margin-top: 10px;
    margin-bottom: 10px;
}

td {
    padding: 1px;
    margin: 2px;
}

tbody, td {
    text-align: center;
}

.user_profile {
    width: 50%;
    margin: auto;
    padding-top: 5px;
    margin-top: 5px;
    margin-bottom: 10px;
    text-align: center;
    align-items: center;
    background-color: #a2a8d3;
    border-radius: 15px;
}

a {
    color: #113f67;
}

a:link {
    color: #113f67;
}

a:visited {
    color: #113f67;
}

